# tutorial-parse-large-json-file

./: .gitignore  00_generate_large_file.py  01_parse_movies.py  02_parse_movies_with_orjson.py  03_parse_movies_in_batches.py  04_parse_movies_in_parallel.py  04_parse_movies_in_processes.py  Makefile  README.md  generate_large_file.py  pyproject.toml  utils.py
