[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Anton Kuzmenko", email = "1917237+NoNonsenseDev@users.noreply.github.com"},
]
dependencies = [
    "orjson>=3.7.7",
    "filprofiler>=2022.6.0",
]
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
extraPaths = ["__pypackages__/3.10/lib/"]
